Added Angular materials and applied its icons (no icons were showing)

--- a/src/app/drawing-board/drawing-board.component.css
+++ b/src/app/drawing-board/drawing-board.component.css
@@ -1,3 +1,8 @@
+/*  https://stackoverflow.com/questions/47152530/tooltip-issue-mattooltip-not-working-in-angular */
+::ng-deep .cdk-overlay-container {
+  z-index: 9999;
+} 
+
 /* From drawflow > beautiful.css */
 :root {
   --border-color: #cacaca;
